added login and register